--- a/public/css/Component/Customer/Customer_Main.css
+++ b/public/css/Component/Customer/Customer_Main.css
@@ -13,6 +13,7 @@
         width: 100%;
         height: 100vh;
         min-height: 500px !important;
+        max-height: 1400px !important;
         display: grid;
         overflow: scroll;
         grid-template-columns: 17% 83%;
